# TPI

./: CMakeLists.txt  README.md  RESPUESTAS.md  auxiliares.cpp  auxiliares.h  ejercicios.cpp  main.cpp
lib/googletest-master/: CMakeLists.txt
tests/: cambiarBanderitaTEST.cpp  definicionesTEST.h  ganoTEST.cpp  jugarPlusTEST.cpp  minasAdyacentesTEST.cpp  perdioTEST.cpp  sugerir121TEST.cpp
